--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A bash wrapper",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js"
   },
   "repository": {
     "type": "git",
@@ -21,5 +22,8 @@
   "bugs": {
     "url": "https://github.com/cekkr/wvv.js/issues"
   },
-  "homepage": "https://github.com/cekkr/wvv.js#readme"
+  "homepage": "https://github.com/cekkr/wvv.js#readme",
+  "dependencies": {
+    "inquirer": "^7.0.4"
+  }
 }
